[gd_scene load_steps=14 format=3 uid="uid://bjyjpqim2hvo5"]

[ext_resource type="Texture2D" uid="uid://fe7g7gqgyyo6" path="res://assets/sprites/map/Dwarf Sprite Sheet 1.3v.png" id="1_20baq"]
[ext_resource type="Script" path="res://map/shop/shop.gd" id="1_qgkoc"]
[ext_resource type="PackedScene" uid="uid://dnnfsbyqjdi80" path="res://map/shop/shop_scene.tscn" id="3_w7amk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t2sp4"]
atlas = ExtResource("1_20baq")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lktxt"]
atlas = ExtResource("1_20baq")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_po4ha"]
atlas = ExtResource("1_20baq")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fr1y"]
atlas = ExtResource("1_20baq")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y8lr"]
atlas = ExtResource("1_20baq")
region = Rect2(256, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c3wbu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2sp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lktxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po4ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fr1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y8lr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_c05y3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rv7gx"]
resource_name = "idle"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lf40y"]
_data = {
"RESET": SubResource("Animation_c05y3"),
"idle": SubResource("Animation_rv7gx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_8v4sg"]
radius = 14.0357

[node name="Shop" type="Node2D"]
script = ExtResource("1_qgkoc")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -32.0
offset_top = -21.0
offset_right = 44.0
offset_bottom = -7.0
theme_override_font_sizes/font_size = 8
text = "Press F to open"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c3wbu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lf40y")
}
autoplay = "idle"

[node name="Open" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Open"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_8v4sg")

[node name="ShopScene" parent="." instance=ExtResource("3_w7amk")]

[connection signal="body_entered" from="Open" to="." method="_on_open_body_entered"]
[connection signal="body_exited" from="Open" to="." method="_on_open_body_exited"]

[editable path="ShopScene"]
